# PM

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt  main.cpp  pm.desktop
src/clipboard/: CMakeLists.txt  textclipboard.hpp
src/dbmanager/: CMakeLists.txt  dbmanager.cpp  dbmanager.hpp
src/passwordmanager/: CMakeLists.txt  passwordmanager.cpp  passwordmanager.hpp
src/ui/: Main.qml  qml.qrc
src/ui/Pages/: LoginPage.qml  MainPage.qml  PasswordsPage.qml  RegistrationPage.qml
src/ui/Theme/: CustomButton.qml  CustomTextField.qml  Theme.qml  qmldir
src/ui/assets/: assets.qrc
src/usermanager/: CMakeLists.txt  usermanager.cpp  usermanager.hpp
